# homelab

./: .gitignore  .sops.yaml  README.md
.superpowers/sdd/: final-critical-import-report.md  task-10-report.md  task-9-report.md
scripts/: check-komodo-gitops.py
stacks/actual/: .gitignore  README.md  banks.toml.enc  docker-compose.yml  enc.env
stacks/actual/fints-actual-bridge/: .env.example  .gitignore  Dockerfile  README.md  banks.toml.example  package-lock.json  package.json  pyproject.toml
stacks/actual/fints-actual-bridge/src/fints_bridge/: camt052.py  config.py  daemon.py  fetch.py  spike.py
stacks/actual/fints-actual-bridge/src/importer/: canonical.mjs  manifest.mjs  merchant.mjs  registry.mjs  text.mjs  validate.mjs
stacks/actual/fints-actual-bridge/test/: baader-daemon.test.mjs  canonical.test.mjs  import-flow.test.mjs  manifest.test.mjs  merchant.test.mjs  registry.test.mjs  smoke.test.mjs  validate.test.mjs
stacks/actual/fints-actual-bridge/test/fixtures/: card-transactions.json  giro-transactions.json
stacks/beerbot/: .gitignore  README.md  beerbot.env.example  docker-compose.yml  enc.env  fcm-api.json.enc  init-databases.sh  old-vps.key.enc  registry.env.enc
stacks/home-assistant/: docker-compose.yml
stacks/ledfx/: README.md  config.example.json  docker-compose.yaml
stacks/monitoring/: docker-compose.yml
stacks/mqtt/: docker-compose.yml
stacks/music-assistant/: docker-compose.yml
stacks/proxy/: Caddyfile  docker-compose.yml  enc.env
syncs/: actions.toml  procedures.toml  servers.toml  stacks.toml  variables.toml
(+73 files in other folders)
